--- a/assets/scss/utility.scss
+++ b/assets/scss/utility.scss
@@ -29,6 +29,12 @@ $display: (
     "grid",
 );
 
+
+$headerHeightMobile: 105px;
+$headerHeightDesktop: 125px;
+$footerHeightMobile: 81px;
+$footerHeightDesktop: 81px;
+
 /*********
 * TEXT ALIGN
 *********/
